# Quitrax

./: .gitignore  README.md  implementation.md
.claude/: settings.local.json
.stellar-deploy/: groth16_verifier.id  testnet.env
circuits/: claim.circom  package-lock.json  package.json
docs/: SETUP.md
scripts/: 01_deploy_verifier.sh  02_circuit_setup.sh  03_prove.sh  env.sh  provision.sh
scripts/groth16-encoder/: Cargo.toml
scripts/groth16-encoder/src/: main.rs
scripts/quitrax-prepare/: Cargo.toml
scripts/quitrax-prepare/src/: main.rs
